--- a/package.json
+++ b/package.json
@@ -4,10 +4,60 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "@nx/js": "22.5.0",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@eslint/js": "^9.8.0",
+    "@nx/eslint": "22.5.0",
+    "@nx/eslint-plugin": "22.5.0",
+    "@nx/js": "^22.5.0",
+    "@nx/react": "^22.5.0",
+    "@nx/storybook": "^22.5.0",
+    "@nx/vite": "22.5.0",
+    "@nx/web": "22.5.0",
     "@nx/workspace": "22.5.0",
-    "nx": "22.5.0"
+    "@storybook/react-vite": "10.2.8",
+    "@swc-node/register": "~1.11.1",
+    "@swc/cli": "~0.8.0",
+    "@swc/core": "~1.15.5",
+    "@swc/helpers": "~0.5.18",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^20.0.0",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^4.0.0",
+    "ajv": "^8.0.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
+    "nx": "22.5.0",
+    "prettier": "~3.6.2",
+    "storybook": "10.2.8",
+    "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.40.0",
+    "verdaccio": "^6.0.5",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^4.0.0"
+  },
+  "dependencies": {
+    "@base-ui/react": "^1.1.0",
+    "lucide-react": "^0.563.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
+    "tailwindcss": "^4.0.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
