--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@infinity-ui/components": ["libs/components/index.ts"]
+      "@infinityui/components": ["libs/components/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
